Started localization (fr, bg)

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@fortawesome/react-fontawesome": "^0.2.3",
     "@hcaptcha/react-hcaptcha": "^1.12.0",
     "@material-tailwind/react": "^2.1.10",
-    "next": "15.3.4",
+    "next": "^15.5.6",
+    "next-intl": "^4.4.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
